--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -198,3 +198,17 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 bindsym $mod+Escape mode "$mode_system"
+
+
+set $mode_powersave Powersave (h) high 80%|5m|20m, (l) low 10%|1m|3m, (m) music -|10s|never, (n) none -|never|never
+mode "$mode_powersave" {
+    bindsym h exec --no-startup-id ~/scripts/powersave.sh high, mode "default"
+    bindsym l exec --no-startup-id ~/scripts/powersave.sh low, mode "default"
+    bindsym m exec --no-startup-id ~/scripts/powersave.sh music, mode "default"
+    bindsym n exec --no-startup-id ~/scripts/powersave.sh none, mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+p mode "$mode_powersave"
