--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -166,7 +166,7 @@ for_window [class="URxvt"] border 1pixel
 
 # floating windows
 for_window [class="Galculator"] floating enable
-for_window [title="Hangout"] floating enable
+# for_window [title="Hangout"] floating enable
 for_window [title="Wicd"] floating enable
 
 # normal border
@@ -184,6 +184,9 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 15
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 15
 
 bindsym $mod+c exec google-chrome-stable
+
+# start hangouts on workspace 4
+assign [title="Hangout"] 4
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
