--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -156,6 +156,9 @@ bar {
 
 # Stuff Ethan Added
 
+# start hangouts on workspace 4
+for_window [title="Hangouts"] move container to workspace 4
+
 # 0px Border Windows
 for_window [class="Chromium"] border none
 for_window [title="Google Chrome"] border none
@@ -166,7 +169,7 @@ for_window [class="URxvt"] border 1pixel
 
 # floating windows
 for_window [class="Galculator"] floating enable
-# for_window [title="Hangout"] floating enable
+for_window [window_role="pop-up"] floating enable
 for_window [title="Wicd"] floating enable
 
 # normal border
@@ -184,9 +187,8 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 15
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 15
 
 bindsym $mod+c exec google-chrome-stable
+bindsym $mod+t exec ~/scripts/toggletouchpad.sh
 
-# start hangouts on workspace 4
-assign [title="Hangout"] 4
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
