--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -152,6 +152,15 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    colors {
+        background #151515
+        statusline #839496
+
+        # border, background, text
+        inactive_workspace #151515 #151515 #839496
+        focused_workspace #90a959 #90a959 #f5f5f5
+        urgent_workspace #ac4142 #ac4142 #f5f5f5
+    }
         status_command i3status
 }
 
