--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -154,10 +154,10 @@ bindsym $mod+r mode "resize"
 bar {
     colors {
         background #151515
-        statusline #839496
+        statusline #f5f5f5
 
         # border, background, text
-        inactive_workspace #151515 #151515 #839496
+        inactive_workspace #151515 #151515 #f5f5f5
         focused_workspace #90a959 #90a959 #f5f5f5
         urgent_workspace #ac4142 #ac4142 #f5f5f5
     }
@@ -227,3 +227,12 @@ mode "$mode_powersave" {
     bindsym Escape mode "default"
 }
 bindsym $mod+p mode "$mode_powersave"
+
+# Colors:
+# class                 border  backgr. text    indicator
+client.focused          #d28445 #d28445 #f5f5f5 #2e9ef4
+client.focused_inactive #202020 #202020 #f5f5f5 #484e50
+client.unfocused        #202020 #202020 #888888 #292d2e
+client.urgent           #2f343a #900000 #f5f5f5 #900000
+client.placeholder      #000000 #0c0c0c #f5f5f5 #202020
+
