--- a/vm/.i3/config
+++ b/vm/.i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym Mod1+F4 kill
 
 # start dmenu (a program launcher)
 bindsym $mod+r exec dmenu_run -fn 'Open Sans-$textsize'
