--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -7,7 +7,7 @@
     </alias>
     <alias>
         <family>sans-serif</family>
-        <prefer><family>Droid Serif</family></prefer>
+        <prefer><family>Open Sans</family></prefer>
     </alias>
     <alias>
         <family>sans</family>
