--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -33,10 +33,10 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym Mod1+F4 kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'Droid Sans-$textsize'
+bindsym $mod+r exec dmenu_run -fn 'Droid Sans-$textsize'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -78,7 +78,7 @@ bindsym $mod+f fullscreen
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -147,7 +147,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+# bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -196,9 +196,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset -q Master,0 5%-"
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 15
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 15
 
-bindsym $mod+c exec google-chrome-stable
+bindsym $mod+c exec google-chrome-stable --force-device-scale-factor=2
 bindsym $mod+t exec ~/scripts/toggletouchpad.sh
-
+bindsym $mod+e exec pcmanfm
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
