--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -78,7 +78,7 @@ bindsym $mod+f fullscreen
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+bindsym $mod+q layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -197,7 +197,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset -q Master,0 5%-"
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 15
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 15
 
-bindsym $mod+c exec google-chrome-stable --force-device-scale-factor=2
+bindsym $mod+c exec google-chrome-stable --force-device-scale-factor=1.5
 bindsym $mod+t exec ~/scripts/toggletouchpad.sh
 bindsym $mod+e exec pcmanfm
 
