--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $textsize 15
+set $textsize 12
 
 set $mod Mod4
 
@@ -30,7 +30,7 @@ font pango:Droid Sans Mono $textsize
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym Mod1+F4 kill
@@ -172,16 +172,18 @@ bar {
 # 0px Border Windows
 for_window [class="Chromium"] border none
 for_window [title="Google Chrome"] border none
-for_window [class="Firefox"] border none
+for_window [class="firefox"] border none
 
 # 1px Border Windows
 for_window [class="URxvt"] border 1pixel
 for_window [class="Termite"] border 1pixel
+for_window [class="Alacritty"] border 1pixel
 
 # floating windows
 for_window [class="Galculator"] floating enable
 for_window [window_role="pop-up"] floating enable
 for_window [title="Wicd"] floating enable
+for_window [class="Lightscreen"] floating enable
 
 # normal border
 # for_window [title="Hangout"] border normal
