--- a/laptop/.i3/config
+++ b/laptop/.i3/config
@@ -192,7 +192,7 @@ for_window [class="Lightscreen"] floating enable
 floating_minimum_size 400 x 600
 
 # Special keys
-bindsym XF86AudioMute exec --no-startup-id "amixer sset -q Master,0 toggle"
+bindsym XF86AudioMute exec --no-startup-id ~/scripts/toggle-mute.sh
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer sset -q Master,0 5%+"
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset -q Master,0 5%-"
 
