--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:inconsolata 12
+font pango:iosevka 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -195,10 +195,10 @@ bindsym $mod+c exec firefox
 bindsym $mod+e exec pcmanfm
 
 # 0px Border Windows
-for_window [class="Firefox"] border none
 
 # 1px Border Windows
 for_window [class="Alacritty"] border 1pixel
+for_window [class="firefox"] border 1pixel
 
 # floating windows
 for_window [class="Galculator"] floating enable
