--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -48,6 +48,10 @@ bindsym Mod1+F4 kill
 
 # start dmenu (a program launcher)
 bindsym $mod+r exec dmenu_run
+
+# start flameshot, a screenshot tool
+bindsym $mod+Shift+s exec flameshot gui
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
