--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -207,6 +207,10 @@ for_window [class="firefox"] border 1pixel
 # floating windows
 for_window [class="Galculator"] floating enable
 for_window [window_role="pop-up"] floating enable
+for_window [title="blueman-manager"] floating enable
+for_window [title="Volume Control"] floating enable
+# godot game debug window (end with (DEBUG))
+for_window [title=".*\(DEBUG\)$"] floating enable
 
 
 # Colors:
@@ -240,3 +244,4 @@ mode "$mode_monitors" {
 }
 bindsym $mod+m mode "$mode_monitors"
 
+focus_on_window_activation focus
