--- a/desktop/.config/i3status/config
+++ b/desktop/.config/i3status/config
@@ -17,22 +17,22 @@ general {
 order += "memory"
 order += "disk /"
 order += "load"
-order += "ethernet enp4s0"
+order += "ethernet eno1"
 order += "volume master"
 order += "tztime local"
 #
 # order += "ipv6"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
-# order += "wireless wlp1s0"
+# order += "wireless wlp7s0"
 # order += "battery 1"
 
-wireless wlp1s0 {
+wireless wlp7s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
 
-ethernet enp4s0 {
+ethernet eno1 {
         # if you use %speed, i3status requires root privileges
         format_up = "IP: %ip"
         format_down = "E: down"
