--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -11,77 +11,77 @@ duration = 0
 
 
 
-# (Github Light) Colors for Alacritty
-[colors]
-draw_bold_text_with_bright_colors = true
-indexed_colors = []
-
-[colors.primary]
-background = "0xffffff"
-foreground = "0x1F2328"
-
-[colors.cursor]
-cursor = "0x222222"
-text = "0x1f2328"
-
-[colors.normal]
-black = "0x24292f"
-red = "0xcf222e"
-green = "0x116329"
-yellow = "0x4d2d00"
-blue = "0x0969da"
-magenta = "0x8250df"
-cyan = "0x1b7c83"
-white = "0x6e7781"
-
-[colors.bright]
-black = "0x57606a"
-red = "0xa40e26"
-green = "0x1a7f37"
-yellow = "0x633c01"
-blue = "0x218bff"
-magenta = "0x8250df"
-cyan = "0x1b7c83"
-white = "0x6e7781"
-
-
-
-
-
-
-
-# # Tomorrow night theme
+# # (Github Light) Colors for Alacritty
 # [colors]
 # draw_bold_text_with_bright_colors = true
 # indexed_colors = []
 
-# [colors.bright]
-# black = "0x666666"
-# blue = "0x81a2be"
-# cyan = "0x54ced6"
-# green = "0x9ec400"
-# magenta = "0xb77ee0"
-# red = "0xff3334"
-# white = "0x282a2e"
-# yellow = "0xf0c674"
+# [colors.primary]
+# background = "0xffffff"
+# foreground = "0x1F2328"
 
 # [colors.cursor]
-# cursor = "0xffffff"
-# text = "0x1d1f21"
+# cursor = "0x222222"
+# text = "0x1f2328"
 
 # [colors.normal]
-# black = "0x1d1f21"
-# blue = "0x81a2be"
-# cyan = "0x70c0ba"
-# green = "0xb5bd68"
-# magenta = "0xb294bb"
-# red = "0xcc6666"
-# white = "0x373b41"
-# yellow = "0xe6c547"
+# black = "0x24292f"
+# red = "0xcf222e"
+# green = "0x116329"
+# yellow = "0x4d2d00"
+# blue = "0x0969da"
+# magenta = "0x8250df"
+# cyan = "0x1b7c83"
+# white = "0x6e7781"
 
-# [colors.primary]
-# background = "0x1d1f21"
-# foreground = "0xc5c8c6"
+# [colors.bright]
+# black = "0x57606a"
+# red = "0xa40e26"
+# green = "0x1a7f37"
+# yellow = "0x633c01"
+# blue = "0x218bff"
+# magenta = "0x8250df"
+# cyan = "0x1b7c83"
+# white = "0x6e7781"
+
+
+
+
+
+
+
+# Tomorrow night theme
+[colors]
+draw_bold_text_with_bright_colors = true
+indexed_colors = []
+
+[colors.bright]
+black = "0x666666"
+blue = "0x81a2be"
+cyan = "0x54ced6"
+green = "0x9ec400"
+magenta = "0xb77ee0"
+red = "0xff3334"
+white = "0x282a2e"
+yellow = "0xf0c674"
+
+[colors.cursor]
+cursor = "0xffffff"
+text = "0x1d1f21"
+
+[colors.normal]
+black = "0x1d1f21"
+blue = "0x81a2be"
+cyan = "0x70c0ba"
+green = "0xb5bd68"
+magenta = "0xb294bb"
+red = "0xcc6666"
+white = "0x373b41"
+yellow = "0xe6c547"
+
+[colors.primary]
+background = "0x1d1f21"
+foreground = "0xc5c8c6"
 
 
 
