switching kb/mouse settings to global for desktop

--- a/desktop/.config/i3/config
+++ b/desktop/.config/i3/config
@@ -233,10 +233,11 @@ mode "$mode_power" {
 }
 bindsym $mod+Escape mode "$mode_power"
 
+
 set $mode_monitors (b) both monitors, (r) right monitor
 mode "$mode_monitors" {
     bindsym b exec ~/.screenlayout/default.sh && i3-msg restart, mode "default"
-    bindsym r exec ~/.screenlayout/right-only.sh && i3-msg restart, mode "default"
+    bindsym r exec ~/.screenlayout/only-right.sh && i3-msg restart, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
