--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -15,6 +15,6 @@
     </alias>
     <alias>
         <family>monospace</family>
-        <prefer><family>iosevka</family></prefer>
+        <prefer><family>DepartureMono</family></prefer>
     </alias>
 </fontconfig>
