--- a/laptop/.config/i3/config
+++ b/laptop/.config/i3/config
@@ -30,7 +30,7 @@ font pango:Droid Sans Mono $textsize
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec ghostty
 
 # kill focused window
 bindsym Mod1+F4 kill
@@ -192,9 +192,10 @@ for_window [class="Lightscreen"] floating enable
 floating_minimum_size 400 x 600
 
 # Special keys https://wiki.archlinux.org/title/Lenovo_ThinkPad_X13_Gen_3
-bindsym XF86AudioMute exec --no-startup-id ~/scripts/toggle-mute.sh
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer sset -q Master,0 5%+"
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer sset -q Master,0 5%-"
+bindsym XF86AudioMute exec --no-startup-id pamixer -t
+bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 5
+bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 5
+bindsym XF86AudioMicMute exec --no-startup-id "pamixer --source 1 -t; pamixer --source 2 -t"
 
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl -e --min-value=15 s 10%-
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl -e s +10%
@@ -219,18 +220,18 @@ mode "$mode_system" {
 bindsym $mod+Escape mode "$mode_system"
 
 
-set $mode_powersave Powersave (h) high 80%|5m|20m, (l) low 10%|1m|3m, (m) music -|10s|never, (n) none -|never|never
-mode "$mode_powersave" {
-    bindsym h exec --no-startup-id ~/scripts/powersave.sh high, mode "default"
-    bindsym l exec --no-startup-id ~/scripts/powersave.sh low, mode "default"
-    bindsym m exec --no-startup-id ~/scripts/powersave.sh music, mode "default"
-    bindsym n exec --no-startup-id ~/scripts/powersave.sh none, mode "default"
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+p mode "$mode_powersave"
+# set $mode_powersave Powersave (h) high 80%|5m|20m, (l) low 10%|1m|3m, (m) music -|10s|never, (n) none -|never|never
+# mode "$mode_powersave" {
+#     bindsym h exec --no-startup-id ~/scripts/powersave.sh high, mode "default"
+#     bindsym l exec --no-startup-id ~/scripts/powersave.sh low, mode "default"
+#     bindsym m exec --no-startup-id ~/scripts/powersave.sh music, mode "default"
+#     bindsym n exec --no-startup-id ~/scripts/powersave.sh none, mode "default"
+# 
+#     # back to normal: Enter or Escape
+#     bindsym Return mode "default"
+#     bindsym Escape mode "default"
+# }
+# bindsym $mod+p mode "$mode_powersave"
 
 # Colors:
 # class                 border  backgr. text    indicator
@@ -241,4 +242,22 @@ client.urgent           #2f343a #900000 #f5f5f5 #900000
 client.placeholder      #000000 #0c0c0c #f5f5f5 #202020
 
 # auto start
+
+# network-manager tray
 exec --no-startup-id nm-applet
+# notifications
+exec --no-startup-id dunst
+# timers for dimming/suspending
+exec --no-startup-id /home/freied/scripts/idlehook.sh
+# lock when suspending
+exec --no-startup-id xss-lock -- dm-tool switch-to-greeter
+# pulse audio sys tray
+exec --no-startup-id pa-applet
+# pulse audio change notifications
+exec --no-startup-id pa-notify -t 2
+# thunderbird tray
+exec --no-startup-id birdtray
+# auto mounting utility
+exec --no-startup-id udiskie
+# background/wallpaper
+exec --no-startup-id feh --bg-fill --randomize /home/freied/.config/wallpaper
