--- a/laptop/etc/X11/xorg.conf.d/30-libinput.conf
+++ b/laptop/etc/X11/xorg.conf.d/30-libinput.conf
@@ -6,6 +6,7 @@ Section "InputClass"
     Option "TappingButtonMap" "lmr"
     Option "NaturalScrolling" "true"
     Option "AccelSpeed" "0.3"
+    Option "ClickMethod" "clickfinger"
 EndSection
 
 Section "InputClass"
