ghostty and i3 updates

--- a/laptop/.config/i3/config
+++ b/laptop/.config/i3/config
@@ -172,12 +172,13 @@ bar {
 # 0px Border Windows
 for_window [class="Chromium"] border none
 for_window [title="Google Chrome"] border none
-for_window [class="firefox"] border none
 
 # 1px Border Windows
 for_window [class="URxvt"] border 1pixel
 for_window [class="Termite"] border 1pixel
 for_window [class="Alacritty"] border 1pixel
+for_window [class="ghostty"] border 1pixel
+for_window [class="firefox"] border 1pixel
 
 # floating windows
 for_window [class="Galculator"] floating enable
